# base

./: .gitignore  .megalinter.yml  .npmrc  .tool-versions  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/: SECURITY.md
config/: .proselintrc  .secretlintrc.json  lychee.toml
reports/kics/: results.json
reports/lychee/: lychee.md
reports/megalinter/copy-paste/html/: index.html  jscpd-report.json
shell/: Taskfile.yml  aliases
shell/environment/: history
shell/lib/: .shell  dev.sh
shell/locks/: lockfile.ignore  snapshot.timestamp
tasks/: lint.yml
